        Reported by Thierry Templier.
      - Fixed HttpClient client connector for the Android extension.
      - Fixed conversion bug with annotated methods returning void.
        Reported by Pierre-Yves Ricau.       
      - Fixed bug in DigesterRepresentation#getText() not working as
        expected. Reported by Bruno Harbulot.
    - Misc
      - Server connectors now display the port they are listening on
        in their start message.  
      - Optimized by a factor 10, the speed of the getStream() method
        in StringRepresentation, using a ByteArrayInputStream.
      - Improved ServerResource and Finder Javadocs with lifecycle 
        information. Suggested by Alex Milowski.
      - Added links from API packages to user guide (wiki).
        Suggested by Alex Milowski.
      - OData Generator now uses the current directory by default
        if none is provided via arguments.
      
- 2.0 Release Candidate 3 (2010-04-23)
    - API changes
      - Replaced MemoryRealm#findRoles(Set<Group>, User) method by
        findRoles(Set<Group>), findRoles(Group) and findRoles(User)
        to clarify contract. Suggested by Brunon Harbulot.
      - Added proxy configuration to the internal client connector 
        (necessary for the sip connector).
      - Added "ftl" extension to MetadataService for FreeMarker 
        templates.
      - Keeped few MediaType constants for the GWT edition in order 
        to reduce size.
    - Bugs fixed
      - Fixed support of parameters with the MediaType class. The 
        name contains the the main and sub types, plus the parameters.
        Reported by Carsten Lohmann.
      - Fixed generation of GET request sent by the internal 
        connector just after a request with an entity.
      - Moved ServletUtils class introduced in RC2 into the 
        org.restlet.ext.servlet package.
      - Fixed potential NPE with the Extractor.
        Reported by Graham Smith.